Crash in [@ (anonymous namespace)::ParticularProcessPriorityManager::ActivityChanged]
Categories
(Core :: DOM: Content Processes, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox89 | --- | unaffected |
firefox90 | --- | fixed |
firefox91 | --- | fixed |
People
(Reporter: kbrosnan, Assigned: mccr8)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
Crash report: https://crash-stats.mozilla.org/report/index/4d806bcc-fd45-4867-b362-c20b40210608
Reason: SIGSEGV /SEGV_MAPERR
Top 10 frames of crashing thread:
0 libxul.so dom/ipc/ProcessPriorityManager.cpp:725
1 libxul.so std::__ndk1::__function::__func< /builds/worker/fetches/android-ndk/sources/cxx-stl/llvm-libc++/include/functional:1714
2 libxul.so mozilla::dom::BrowsingContext::PreOrderWalkVoid docshell/base/BrowsingContext.cpp:1004
3 libxul.so mozilla::ProcessPriorityManager::ActivityChanged dom/ipc/ProcessPriorityManager.cpp:878
4 libxul.so mozilla::dom::BrowserHost::SetRenderLayers dom/ipc/BrowserHost.cpp:120
5 libxul.so {virtual override thunk}
6 libxul.so NS_InvokeByIndex xpcom/reflect/xptcall/md/unix/xptcinvoke_arm.cpp:167
7 libxul.so XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1143
8 libxul.so XPC_WN_GetterSetter js/xpconnect/src/XPCWrappedNativeJSOps.cpp:953
9 libxul.so js::CallSetter js/src/vm/Interpreter.cpp:729
60/40 split on ARMv7 vs ARM64 which is unusual.
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 1•4 years ago
|
||
Maybe we should null check canonical->GetBrowserParent()
in ProcessPriorityManagerImpl::ActivityChanged.
Assignee | ||
Comment 2•4 years ago
|
||
Assignee | ||
Updated•4 years ago
|
Comment 4•4 years ago
|
||
bugherder |
Comment 5•4 years ago
|
||
The patch landed in nightly and beta is affected.
:mccr8, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 6•4 years ago
|
||
Comment on attachment 9226394 [details]
Bug 1715311 - Null check GetBrowserParent() in ProcessPriorityManagerImpl::ActivityChanged.
Beta/Release Uplift Approval Request
- User impact if declined: Crashes. These are only showing on Fenix for some reason, but in theory they could affect Windows, too.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It is just a null check.
- String changes made/needed: none
Assignee | ||
Comment 7•4 years ago
|
||
This crash has not recurred on Nightly since my patch landed, though the crash volume is low enough that it is hard to tell for sure that it has been fixed.
Updated•4 years ago
|
Comment 9•4 years ago
|
||
Comment on attachment 9226394 [details]
Bug 1715311 - Null check GetBrowserParent() in ProcessPriorityManagerImpl::ActivityChanged.
approved for 90.0b8
Comment 10•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Assignee | ||
Comment 11•4 years ago
|
||
Looks like it has not recurred on either Nightly or beta since the patch landed.
Description
•