Bug 1715311 - Null check GetBrowserParent() in ProcessPriorityManagerImpl::ActivityChanged. r=kmag, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D117455